tests/baselines/reference/conditionalExpressionNewLine1.errors.txt
conditionalExpressionNewLine1.ts(1,9): error TS2304: Cannot find name 'a'.
conditionalExpressionNewLine1.ts(1,13): error TS2304: Cannot find name 'b'.
conditionalExpressionNewLine1.ts(1,17): error TS2304: Cannot find name 'c'.


==== conditionalExpressionNewLine1.ts (3 errors) ====
    var v = a ? b : c;
            ~
!!! error TS2304: Cannot find name 'a'.
                ~
!!! error TS2304: Cannot find name 'b'.
                    ~
!!! error TS2304: Cannot find name 'c'.